[package]
name = "notbot-axum-oidc"
description = "A hack to work around crates.io publishing requirements. You probably should use the original instead."
version = "0.6.0"
edition = "2021"
authors = ["Ari Gato <ari@is-a.cat>"]
readme = "README.md"
repository = "https://github.com/arachnist/axum-oidc"
license = "LGPL-3.0-or-later"
keywords = [ "axum", "oidc", "openidconnect", "authentication" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
axum-core = "0.5"
axum = { version = "0.8", default-features = false, features = [ "query" ] }
tower-service = "0.3"
tower-layer = "0.3"
tower-sessions = { version = "0.14", default-features = false, features = [ "axum-core" ] }
http = "1.2"
openidconnect = "4.0"
serde = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false }
urlencoding = "2.1"
